GamePlan/main/default/objects/Initiatives_Object__c/Initiatives_Object__c.object-meta.xml
<CustomObject>
	<label>Initiatives Object</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Initiatives Objects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>