GamePlan/main/default/objects/Initiatives_Object__c/fields/Account__c.field-meta.xml
<CustomField>
	<fullName>Account__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Account</label>
	<referenceTo>Account</referenceTo>
	<relationshipName>Initiative_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>