GamePlan/main/default/objects/Initiatives_Object__c/fields/Contact__c.field-meta.xml
<CustomField>
	<fullName>Contact__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Contact</label>
	<referenceTo>Contact</referenceTo>
	<relationshipLabel>Initiatives Objects</relationshipLabel>
	<relationshipName>Initiatives_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>