GamePlan/main/default/objects/Initiatives_Object__c/fields/Initiatives_Object__c.field-meta.xml
<CustomField>
	<fullName>Initiatives_Object__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Initiatives Object</label>
	<referenceTo>Initiatives_Object__c</referenceTo>
	<relationshipLabel>Initiatives Objects</relationshipLabel>
	<relationshipName>Initiative_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>