GamePlan/main/default/objects/Initiatives_Object__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Initiative</fullName>
			</value>
			<value>
				<fullName>Goal</fullName>
			</value>
			<value>
				<fullName>Strategy</fullName>
			</value>
			<value>
				<fullName>Tactic</fullName>
			</value>
			<value>
				<fullName>Requirement</fullName>
			</value>
			<value>
				<fullName>Regulation</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>